# liblz4-cmake

./: .gitignore  BUILDING.md  CMakeLists.txt  LZ4Config.cmake  LZ4Config.cmake.in  README.md  lz4io.c  lz4io.h  makefile
.github/workflows/: build_main.yml
include/: lz4io.h
